[package]
name = "checksum_dir"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
license = "MIT OR Apache-2.0"
description = "generate checksums of directories at compile time"
homepage = "https://github.com/JamieH01/checksum_dir"
keywords =[ "hash", "checksum", "validation", "macro" ]
catagories = [ "cryptography", "authentication" ]

[lib]
proc-macro = true

[dependencies]
litrs = "0.4.1"
quote = "1.0.36"
walkdir = "2.5.0"
digest = "0.10.7"

ascon-hash = { version = "0.2.0", optional = true }
belt-hash = { version = "0.1.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
fsb = { version = "0.1.3", optional = true }
gost94 = { version = "0.10.4", optional = true }
groestl = { version = "0.10.1", optional = true }
jh = { version = "0.1.0", optional = true }
md-5 = { version = "0.10.6", optional = true }
md2 = { version = "0.10.2", optional = true }
md4 = { version = "0.10.2", optional = true }
ripemd = { version = "0.1.3", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha1-checked = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
skein = { version = "0.1.0", optional = true }
sm3 = { version = "0.4.2", optional = true }
streebog = { version = "0.10.2", optional = true }
tiger = { version = "0.2.1", optional = true }
whirlpool = { version = "0.10.4", optional = true }

[features]
default = ["sha3"]

blake2      = ["dep:blake2"]
ascon-hash  = ["dep:ascon-hash"]
belt-hash   = ["dep:belt-hash"]
fsb         = ["dep:fsb"]
gost94      = ["dep:gost94"]
groestl     = ["dep:groestl"]
jh          = ["dep:jh"]
md2         = ["dep:md2"]
md4         = ["dep:md4"]
md5        = ["dep:md-5"]
ripemd      = ["dep:ripemd"]
sha1        = ["dep:sha1"]
sha1-checked = ["dep:sha1-checked"]
sha2        = ["dep:sha2"]
sha3        = ["dep:sha3"]
skein       = ["dep:skein"]
sm3         = ["dep:sm3"]
streebog    = ["dep:streebog"]
tiger       = ["dep:tiger"]
whirlpool   = ["dep:whirlpool"]
